manifests/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: blu-live-clinic
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      securityContext:
        fsGroup: 2000
      containers:
      - name: backend
        image: irandejonah/blu-live-clinic-backend:v1.0.50
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        livenessProbe:
          httpGet:
            path: /api/patients
            port: 5000
          initialDelaySeconds: 15
          periodSeconds: 20
        volumeMounts:
        - name: backend-data
          mountPath: /app/storage 
      volumes:
      - name: backend-data
        persistentVolumeClaim:
          claimName: backend-storage
