manifests/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: blu-live-clinic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      securityContext:
        runAsUser: 0
        fsGroup: 0
      serviceAccountName: mongodb-sa
      containers:
      - name: mongodb
        image: irandejonah/blu-live-clinic-db:v1.0.7
        command: ["mongod"]
        args: ["--dbpath=/data/db", "--bind_ip_all"]
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongodb-data
          mountPath: /data/db
      volumes:
      - name: mongodb-data
        persistentVolumeClaim:
          claimName: mongodb-pvc
