manifests/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: blu-live-clinic
spec:
  ports:
    - port: 5000
      protocol: TCP
      targetPort: 5000
  selector:
    app: backend
  type: ClusterIP
