manifests/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: blu-live-clinic
spec:
  selector:
    app: frontend
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
