manifests/frontend-svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-nodeport-service
  namespace: blu-live-clinic
spec:
  ports:
    - nodePort: 30102
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: frontend
  type: NodePort
