manifests/notification-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-svc
  namespace: blu-live-clinic
spec:
  type: ClusterIP
  ports:
    - port: 5001
      protocol: TCP
      targetPort: 5001
  selector:
    app: notification-svc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-svc
  namespace: blu-live-clinic
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notification-svc
  template:
    metadata:
      labels:
        app: notification-svc
    spec:
      containers:
        - name: notification-svc
          image: irandejonah/blu-live-clinic-notification:v1.0.33
          imagePullPolicy: Always
          ports:
            - containerPort: 5001
          volumeMounts:
            - name: notification-data
              mountPath: /app
      volumes:
        - name: notification-data
          persistentVolumeClaim:
            claimName: notification-data
