manifests/rabbitmq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  namespace: blu-live-clinic
  labels:
    app: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management-alpine
          ports:
            - containerPort: 5672
              name: amqp
            - containerPort: 15672
              name: http-mgmt
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: blu-live-clinic
spec:
  ports:
    - port: 5672
      targetPort: 5672
      name: amqp
    - port: 15672
      targetPort: 15672
      name: http-mgmt
  selector:
    app: rabbitmq
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: rabbitmq-management
  namespace: blu-live-clinic
spec:
  to:
    kind: Service
    name: rabbitmq
  port:
    targetPort: http-mgmt
  tls:
    termination: edge
